--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,15 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Term-Visual
-version:      0.07
-version_from: Visual.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Term-Visual
+version:             0.08
+abstract:            Curses split-terminal interface for applications.
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.36
+distribution_type:   module
+requires:     
     Curses:                        
     POE:                           0.19
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Charles Ayres <lunartear@cpan.org>
